--- a/style.css
+++ b/style.css
@@ -19,6 +19,19 @@ body{
 
 }
 
+h1{
+    color: white;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 200px;
+  height: 200px;
+  /* boder-radius: 2px; */
+  margin-top: -2px;
+  margin-left: auto;
+  margin-right: 40px;
+}
+
 .calculator{
     border:1px solid #717377;
     padding: 20px;
@@ -59,10 +72,12 @@ cursor:pointer;
 }
 
 .equalBtn{
-    background-color: #fb7c14;
+    background-color: aqua;
+  color: black;
+    /* background-color: #fb7c14; */
 }
 
 .operater{
     /* color: #6dee0a; */
-    color: yellow;
+    color: aqua;
 }
